Added svg images and architecture section changes

--- a/GroupReport/GroupReport-bibfile.bib
+++ b/GroupReport/GroupReport-bibfile.bib
@@ -138,10 +138,46 @@
   year          = 2016
 }
 
- @misc{ wiki:###,
-   author = "Wikipedia",
-   title = "Sensor fusion - {W}ikipedia{,} the free encyclopedia",
-   year = "2016",
-   url = "https://en.wikipedia.org/wiki/Sensor_fusion",
-   note = "[Online; accessed 30-August-2016]"
- }
+@misc{SensorFusion,
+  author = "Wikipedia",
+  title = "Sensor fusion - {W}ikipedia{,} the free encyclopedia",
+  year = 2016,
+  url = {https://en.wikipedia.org/wiki/Sensor_fusion},
+  note = "{Accessed: 2016-08-30}"
+}
+
+@misc{IndoorAtlas,
+  author = {Indoor Atlas Ltd.},
+  title = {Indoor Atlas},
+  year = 2016,
+  howpublished = {\url{https://www.indooratlas.com}},
+  url = {https://www.indooratlas.com},
+  note = {Accessed: 2016-08-31}
+}
+
+@misc{ApacheKafka,
+  author = {The Apache Software Foundation},
+  title = {Apache Kafka},
+  year = 2016,
+  howpublished = {\url{http://kafka.apache.org/}},
+  url = {http://kafka.apache.org/},
+  note = {Accessed: 2016-08-31}
+}
+
+@misc{ApacheSpark,
+  author = {The Apache Software Foundation},
+  title = {Apache Spark},
+  year = 2016,
+  howpublished = {\url{http://spark.apache.org/}},
+  url = {http://spark.apache.org/},
+  note = {Accessed: 2016-08-31}
+}
+
+@misc{ApacheCassandra,
+  author = {The Apache Software Foundation},
+  title = {Apache Cassandra},
+  year = 2016,
+  howpublished = {\url{http://cassandra.apache.org/}},
+  url = {http://cassandra.apache.org/},
+  note = {Accessed: 2016-08-31}
+}
